2006-10-28  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* gcc.dg/builtins-20.c: Add tests for hypot.
	* gcc.dg/torture/builtin-math-2.c (TESTIT2): New.  Add tests for
	two-argument builtins.
	* gcc.dg/torture/builtin-math-3.c (TESTIT_R): Renamed from
	TESTIT2.  Update all callers.
	(TESTIT2, TESTIT2_R): New helper macros.
	Add testcases for pow, hypot and atan2.

2006-10-28  Andrew Pinski  <andrew_pinski@playstation.sony.com>

	PR C++/29295
	* g++.dg/expr/bool1.C: New test.
	* g++.dg/expr/bool2.C: New test.

2006-10-28  Tobias Burnus  <burnus@net-b.de>

	PR fortran/28224 
	* gfortran.dg/io_constraints_2.f90: Use -std=f95.
	* gfortran.dg/namelist_internal.f90: New test. 

2006-10-28  Tobias Burnus  <burnus@net-b.de>

	PR fortran/29625
	* gfortran.dg/io_real_boz.f90: Add.
	* gfortran.dg/io_real_boz2.f90: Add.

2006-10-28  Richard Guenther  <rguenther@suse.de>

	PR middle-end/26899
	* gcc.dg/tree-ssa/pr26899.c: New testcase.

2006-10-28  Richard Guenther  <rguenther@suse.de>

	PR target/28806
	* gcc.target/i386/math-torture/lround.c: New testcase.

2006-10-27  Kaz Kojima  <kkojima@gcc.gnu.org>

	* gcc.dg/builtins-43.c: Add -fno-finite-math-only.
	* gcc.dg/builtins-44.c: Likewise.
	* gcc.dg/builtins-45.c: Likewise.
	* gcc.dg/pr28796-2.c: Likewise.
	* gcc.dg/unordered-3.c: Likewise.	

2006-10-27  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR libgfortran/27954
	* gfortran.dg/error_recovery_2.f90: New test.

2006-10-26  Richard Guenther  <rguenther@suse.de>

	* gcc.target/i386/i386.exp: Use glob, not find to collect
	tests.  Avoids recursing into subdirectories.
	* gcc.target/i386/math-torture/math-torture.exp: Torture
	for interesting ia32 math options.
	* gcc.target.i386/math-torture/lrint.c: New testcase.

2006-10-26  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR libgfortran/29563
	* gfortran.dg/arrayio_9.f90: Update test.
	* gfortran.dg/arrayio_19.f90: New test.

2006-10-26  Andreas Krebbel  <krebbel1@de.ibm.com>

	* gcc.dg/20061026.c: New testcase.
